Fixed logo spacing

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -135,8 +135,9 @@ span {
     height: 60px;
     width: 60px;
     border-radius: var(--border-radius);
+    margin: 0;
     margin-right: 5px;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 /* default main content styles */
